# blom-matching

./: .env.example  .gitignore  Procfile  README.md  blom-project-structure.md  pyproject.toml  railway.toml
.claude/skills/: SKILL-api.md  SKILL-assignment.md  SKILL-evaluation.md  SKILL-feature-engineering.md  SKILL-force-canvas.md  SKILL-langgraph.md  SKILL-pii.md  SKILL-similarity.md  SKILL-synthetic-data.md
.paul/: PROJECT.md  ROADMAP.md  SPECIAL-FLOWS.md  STATE.md
.paul/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  (+1 more)
config/: matching.yaml
data/schemas/: quiz_response.json
data/synthetic/: demo_seed.json  large_social_seed42.json  medium_singles_seed42.json  small_social_seed42.json
frontend/demo/: index.html  package-lock.json  package.json
frontend/operator/: index.html  package-lock.json  package.json
src/agent/: __init__.py  override_parser.py  prompts.py  schemas.py  workflow.py
src/api/: main.py  middleware.py  schemas.py  state.py
src/data/: __init__.py  anonymiser.py  name_pools.py  synthetic.py
src/evaluation/: __init__.py  feedback.py  metrics.py
src/features/: __init__.py  encoder.py  modifiers.py  weights.py
src/matching/: __init__.py  assignment.py  constraints.py  similarity.py
tests/agent/: test_override_parser.py  test_workflow.py
tests/data/: test_anonymiser.py  test_synthetic.py
tests/evaluation/: test_feedback.py  test_metrics.py
tests/features/: test_encoder.py  test_modifiers.py  test_weights.py
tests/matching/: test_assignment.py  test_similarity.py
(+46 files in other folders)
