[project]
name = "blom-matching"
version = "0.1.0"
description = "Automated group-matching pipeline for Blom Social"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "faker>=24.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jsonschema>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
